--- a/Local_Markets_and_shopping.html
+++ b/Local_Markets_and_shopping.html
@@ -18,7 +18,30 @@
 				</td>
 
 			</tr>
+			<tr>
+				<th >
+					<h1>Cinnamon Island</h1>
+					<img src="Image/cinnamon_island.jpg">
+				</th>
+				
+				<td>
+					<p>The island has been under the ownership of the same family for over a century. They grow cinnamon without the use of any chemical or artificial fertilizers, sticking to traditional methods passed down through generations. Upon arrival, the joyful sounds of children playing can be heard in the distance. Walking towards a small house, the welcoming family greets you with warm smiles. After a brief tour of the island, the locals invite you to their home and seat you on the porch. A cup of cinnamon tea is served, promising to rejuvenate your body, mind, and soul. While enjoying the tea, the eldest family member shares the island's history and the art of cinnamon farming, demonstrating how cinnamon is extracted from tree bark. They offer a variety of oils and cinnamon for you to experience, providing a full sensory journey.</p>
+				</td>
+
+			</tr>
+			<tr>
+				<th >
+					<h1>Galle Fort Market</h1>
+					<img src="Image/gallefort_market.jpg">
+				</th>
+				
+				<td>
+					<p> Situated in the renowned Galle Fort, this marketplace showcases a variety of goods like indigenous handicrafts, jewelry, garments, spices, and mementos. Discover exclusive items like handcrafted textiles, batik materials, authentic masks, and detailed woodwork. It serves as an excellent venue to engage with local culture and connect with skilled craftsmen.</p>
+				</td>
+
+			</tr>
 		</table>
 
 	</body>
 </html>
+
