--- a/MyProject.html
+++ b/MyProject.html
@@ -4,11 +4,12 @@
 		<title>Galle District</title>
 		<style>
 			h1{
-				color:white;
+				color:#ffe6f7;
 				text-align:center;
-				font-size:70px;
+				font-size:80px;
 				margin-bottom:-3px;
 				margin-top:-3px;
+				-webkit-text-stroke: 2.5px black;
 			}
 			img{
 				width:100%;
@@ -52,45 +53,45 @@
 				height:700px;
 				margin-right:30px;
 			}
+			img.rounded-corners{
+				border-radius:50px;
+			}
+			
 		</style>
 		
 	</head>
 
 	<body>	
 		<div class="container">
-			<img src="Image/Galle-Fort-Sri-Lanka-1.jpg"  width=128 height=600 ">
+			<img src="Image/Galle_Fort.jpg"  width="128" height="600" class="rounded-corners">
 			<div class="text-block">
 				<h1>The Gem Places in Galle District</h1>
 			</div>
 		</div>
 		<div class="container1">
 			<div class="firstsq"><h2 style="margin-left:10px;font-family:Lucida Console;font-size:250%">Contents</h2>
-				<ul style="line-height:180%;font-size:180%;font-family:Arial;">
+				<ul style="line-height:150%;font-size:180%;font-family:Arial;line-height:180%">
 					<li ><a href="Historical_Landmarks.html">Historical Landmarks</a></li>
 					<li><a href="Natural_Attractions.html">Natural Attractions</a></li>
 					<li><a href="Cultural_Landmarks.html">Cultural Landmarks</a></li>
 					<li><a href="Scenic_Views.html">Scenic Views</a></li>
 					<li><a href="Local_Markets_and_shopping.html">Local Markets and shopping</a></li>
-				</ul>
+				</ul><br>
+			<div style="background-color:#ffe6ff">
+			<p><center>If you require assistance in visiting these stations,kindly complete the accompanying form.<br>
+			<a href="Guide_Request_form.html">Click here</a></center></p>
+			</div>
 
 			</div>
+			
+	
+
 			<div class="v1"></div>
 			<div class="secondsq">
 				
-				<h2 style="font-size:250%"><u>Description</u></h2>
-				<p>Located within the picturesque Southern Province of Sri Lanka, Galle stands as a distinguished district among the nation's 25 administrative divisions. Governed by a District Secretariat overseen by a designated District Secretary, formerly referred to as a Government Agent, Galle's administration is directly appointed by the central government of Sri Lanka.</p>
-
-<p>Encompassing a total area of 1,652 square kilometers, Galle District boasts a diverse landscape, where 35 square kilometers embrace the gentle caress of water, while 1,617 square kilometers form the solid ground beneath its inhabitants' feet. Bounded by the majestic Benthara River to the north and the sprawling Indian Ocean to the south and west, Galle finds itself embraced by the neighboring districts of Matara and Ratnapura to the east.</p>
-
-<p>Galle's topography presents a tapestry of contrasts and diversity. The climatic conditions within Hiniduma Patthuwa echo those of Sri Lanka's central hill country, adorned with lush rainforests that serve as vital water catchment areas for the rivers and lakes that meander through the district. Notably, the revered Sinharaja Forest Reserve finds its home within Galle's boundaries, adding to the district's ecological richness.</p>
-
-<p>Annual rainfall blesses Galle with a bountiful 2000–2500mm, nurturing vital waterways like the Gin River ("Gin Ganga") and the Madu Ganga, each weaving their paths through the district's verdant landscapes. These rivers not only sustain the land but also contribute to the preservation of ecological balance within Galle's boundaries.</p>
-
-<p>Throughout history, Galle has stood as a beacon of significance in the annals of Sri Lanka. From ancient battles to colonial conquests, the district has played a pivotal role in shaping the region's cultural and historical tapestry. Its name, "Gimhathitha," derived from the Sinhalese word "gala" (stone), symbolizes the meeting place of bullock carts amidst its rocky hills.</p>
-
-<p>Beyond its administrative and historical importance, Galle beckons visitors with its captivating blend of natural beauty and cultural heritage. From the iconic Galle Fort, designated as a UNESCO World Heritage Site, to the tranquil shores of Unawatuna and Hikkaduwa, Galle District invites exploration and discovery. Its diverse ecosystems, pristine coral reefs, and verdant mangrove forests serve as sanctuaries for wildlife enthusiasts and conservationists alike.</p>
-
-<p>In essence, Galle District stands as a testament to Sri Lanka's rich tapestry of history, culture, and natural splendor, inviting all who wander to uncover its hidden treasures and embrace the warmth of its hospitality.</p> </div>
+				<h2 style="font-size:300%">Description</h2>
+				<iframe src="Description.html" height="600" width="800" style="border:none;" title="Iframe"></iframe>
+				 </div>
 		
 		</div>
 	
