--- a/Historical_Landmarks.html
+++ b/Historical_Landmarks.html
@@ -10,7 +10,10 @@
 		<table>
 			<tr>
 				<th style="margin:20px">
-				<img src="Image/GalleFort.jpg">
+				<img src="Image/GalleFort.jpg" usemap="#map1">
+					<map name="map1">
+						<area href="Image/Galle-Fort-Lighthouse.jpg" coords="02,02,661,824" shape="rect">
+					</map>
 				</th>
 				
 				<td>
@@ -35,7 +38,10 @@
 			
 			<tr>
 				<th>
-					<img id="th" src="Image/martin-wickramasinghe_folkHouse.jpg">
+					<img id="th" src="Image/martin-wickramasinghe_folkHouse.jpg" usemap="#map2">
+						<map name="map2">
+							<area href="Image/Koggala-Wickramasinghe-Museum.jpg" coords="02,02,661,824" shape="rect">
+						</map>
 				</th>
 				<td>
 					<h1> Martin Wickramasinghe Folk Museum</h1>
@@ -48,6 +54,31 @@
 				9 a.m to 4 p.m<br>
 				<hr>
 				</td>
+			</tr>
+			<tr >
+				<td colspan="2">
+				<hr></td>
+			</tr>
+			<tr>
+				<th style="margin:20px">
+				<img src="Image/Atapattu-walawwa.jpg" usemap="#map19">
+					<map name="map19">
+						<area href="Image/AtapattuWalawwa.jpg" coords="02,02,661,824" shape="rect">
+					</map>
+				</th>
+				
+				<td>
+					<h1>Atapattu Walawwa</h1>
+					<font><p>Atapattu Walawwa, located at 35 Lower Dickson Road, Walawwatta, Galle, Sri Lanka, is a grand manor house from the colonial era. It was built in 1742 by Mudaliyar Don Bastian Gooneratne. Atapattu Walauwa offers a captivating journey through time, showcasing the heritage of this monument and the individuals who played a part in its construction and occupancy for over two centuries. Through a combination of architectural and socio-historical narratives, this visual and textual account presents a cohesive cultural statement. It skillfully reconstructs elements of past lifestyles as reflected in the architecture and artifacts, while also tracing the fusion of tradition and modernity that characterizes the evolution of Sri Lankan culture in the present era. The description of the beautifully preserved southern walawwa's external forms, interior spaces, and living environments is complemented by an exploration of the life of one of its notable residents. This individual, a feudal-colonial official, a fearless Pali scholar renowned for his numerous editions and translations of classic texts, and a prolific diarist, played a significant but lesser-known role in the Buddhist revival. The narrative threads of this account are deeply intertwined with the nation's history, culminating in a specific contribution to the resurgence of Sri Lanka during the latter half of the 19th and early 20th centuries.Now it is a hotel</p></font>
+				<hr>
+				Entry:<br>
+				You need to book rooms<br>
+				<hr>
+				Timings:<br>
+				Open untill 22.00<br>
+				<hr>
+				</td>
+
 			</tr>
 			<tr >
 				<td colspan="2">
